output_10.1.168/gauge_field.cpp.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
1 error generated when compiling for host.
Error while processing /tmp/gauge_field.cpp-c09be3.hip.

[HIPIFY] info: file './quda/lib/gauge_field.cpp' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 3
  UNCONVERTED refs count: 0
  CONVERSION %: 100
  REPLACED bytes: 68
  TOTAL bytes: 14680
  CHANGED lines of code: 4
  TOTAL lines of code: 373
  CODE CHANGED (in bytes) %: 0
  CODE CHANGED (in lines) %: 1
  TIME ELAPSED s: 0.85
[HIPIFY] info: CONVERTED refs by type:
  numeric_literal: 3
[HIPIFY] info: CONVERTED refs by API:
  CUDA RT API: 3
[HIPIFY] info: CONVERTED refs by names:
  cudaMemcpyDeviceToDevice: 1
  cudaMemcpyDeviceToHost: 1
  cudaMemcpyHostToDevice: 1
